--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel='stylesheet' href='/index.css'>
+	<script defer src='/theme-switcher.js'></script>
 	
 	<script defer src='/build/bundle.js'></script>
 </head>
