--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset='utf-8'>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>PLAYA</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel='stylesheet' href='/index.css'>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>  
+
 	<script defer src='/theme-switcher.js'></script>
 	
 	<script defer src='/build/bundle.js'></script>
