--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>PLAYA</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/dance-statue.ico'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel='stylesheet' href='/index.css'>
